@@ -350,3 +350,21 @@ Disassembly of section \.text:
  4d8:	f8af6bff 	prfm	#0x1f, \[sp,x15\]
  4dc:	f8be58ff 	prfm	#0x1f, \[x7,w30,uxtw #3\]
  4e0:	f9800c7f 	prfm	#0x1f, \[x3,#24\]
+ 4e4:	f9800c60 	prfm	pldl1keep, \[x3,#24\]
+ 4e8:	f9800c61 	prfm	pldl1strm, \[x3,#24\]
+ 4ec:	f9800c62 	prfm	pldl2keep, \[x3,#24\]
+ 4f0:	f9800c63 	prfm	pldl2strm, \[x3,#24\]
+ 4f4:	f9800c64 	prfm	pldl3keep, \[x3,#24\]
+ 4f8:	f9800c65 	prfm	pldl3strm, \[x3,#24\]
+ 4fc:	f9800c68 	prfm	plil1keep, \[x3,#24\]
+ 500:	f9800c69 	prfm	plil1strm, \[x3,#24\]
+ 504:	f9800c6a 	prfm	plil2keep, \[x3,#24\]
+ 508:	f9800c6b 	prfm	plil2strm, \[x3,#24\]
+ 50c:	f9800c6c 	prfm	plil3keep, \[x3,#24\]
+ 510:	f9800c6d 	prfm	plil3strm, \[x3,#24\]
+ 514:	f9800c70 	prfm	pstl1keep, \[x3,#24\]
+ 518:	f9800c71 	prfm	pstl1strm, \[x3,#24\]
+ 51c:	f9800c72 	prfm	pstl2keep, \[x3,#24\]
+ 520:	f9800c73 	prfm	pstl2strm, \[x3,#24\]
+ 524:	f9800c74 	prfm	pstl3keep, \[x3,#24\]
+ 528:	f9800c75 	prfm	pstl3strm, \[x3,#24\]
