@@ -60,3 +60,15 @@
 	.endm
 
 	all_prefetchs	op=prfm, from=0, to=31
+
+	//
+	// PREFETCHS with named operation
+	//
+
+	.irp op, pld, pli, pst
+	.irp l, l1, l2, l3
+	.irp t, keep, strm
+	prfm	\op\l\t, [x3, #24]
+	.endr
+	.endr
+	.endr
